chore: Configure Github Actions pipeline to build catalog app